force-app/main/default/objects/AlexTestReq__mdt/AlexTestReq__mdt.object-meta.xml
<CustomObject>
    <label>AlexTestMtda</label>
    <pluralLabel>AlexTestMtda</pluralLabel>
</CustomObject>