force-app/main/default/objects/AlexTestReq__mdt/fields/Bucket_End__c.field-meta.xml
<CustomField>
    <fullName>Bucket_End__c</fullName>
    <label>Bucket End</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>