force-app/main/default/objects/AlexTestReq__mdt/fields/Bucket_Start__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Start__c</fullName>
    <label>Bucket Start</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>