force-app/main/default/objects/AlexTestReq__mdt/fields/Friendly_Id__c.field-meta.xml
<CustomField>
    <fullName>Friendly_Id__c</fullName>
    <label>Friendly Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>