force-app/main/default/objects/AlexTestReq__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>Friendly_Id__c</columns>
    <columns>Bucket_Start__c</columns>
    <columns>Bucket_End__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>